# etools

./: CMakeLists.txt  CONTRIBUTING  LICENSE  README.md
etools/: etools.hpp
etools/facilities/: facilities.hpp  registry.hpp
etools/factories/: dispatch_factory.hpp  dispatch_factory.tpp  factories.hpp  registry.tpp  static_factory.hpp  static_factory.tpp
etools/factories/utils/: capacity.hpp
etools/hashing/: fks.hpp  fks.tpp  hashing.hpp  llut.hpp  llut.tpp  optimal_mph.hpp  optimal_mph.tpp  utils.hpp  utils.tpp
etools/memory/: buffer.hpp  buffer.tpp  buffer_view.hpp  buffer_view.tpp  envelope.hpp  envelope.tpp  envelope_view.hpp  envelope_view.tpp  memory.hpp  slot.hpp  slot.tpp
etools/meta/: flags.hpp  flags.tpp  info_gen.hpp  meta.hpp  overload.hpp  sort.hpp  traits.hpp  typelist.hpp  typeset.hpp  typeset.tpp  unique_variant.hpp  utility.hpp  utility.tpp
tests/: CMakeLists.txt
tests/facilities/: test_dispatch_factory.cpp  test_registry.cpp  test_static_factory.cpp  test_static_manager.cpp
tests/factories/: test_dispatch_factory.cpp
tests/hashing/: test_fks.cpp  test_llut.cpp  test_optimal_mph.cpp  test_utils.cpp
tests/memory/: test_buffer.cpp  test_buffer_view.cpp  test_envelope.cpp  test_envelope_view.cpp  test_slot.cpp
tests/meta/: test_info_gen.cpp  test_sort.cpp  test_traits.cpp  test_typeset.cpp  test_utility.cpp
tools/: run_tests.sh
